[workspace]
members = [
    "crates/lib",
    "crates/bin_common",
    "crates/gui",
    "crates/headless",
    "crates/img_to_bin"
]
resolver = "2"

[profile.profiling]
inherits = "release"
debug = 1

[workspace.dependencies]
anyhow = "1.0.71"
image = "0.25.1"
byteorder = "1.5.0"
clap = { version = "4.3.0", features = ["derive"] }