[package]
name = "maze_exit_bin"
version = "0.1.0"
authors = ["Davide Canton <davide.canton5@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24.1"
show-image = { version = "0.12.0", features = ["image"] }
maze_exit_lib = { path = "../maze_exit_lib" }
crossterm = "0.23.2"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
clap = { version = "3.1.9", features = ["derive"] }
