[package]
name = "maze_exit_bin_common"
version = "0.1.0"
authors = ["Davide Canton <davide.canton5@gmail.com>"]
edition = "2021"

[dependencies]
maze_exit_lib = { path = "../lib" }
clap.workspace = true
anyhow.workspace = true
image.workspace = true
byteorder.workspace = true
zstd.workspace = true

[dev-dependencies]
test-case = "3.1.0"
