[package]
name = "maze_exit_bin_headless"
version = "0.1.0"
authors = ["Davide Canton <davide.canton5@gmail.com>"]
edition = "2021"

[dependencies]
maze_exit_lib = { path = "../lib" }
maze_exit_bin_common = { path = "../bin_common" }
anyhow.workspace = true
backtrace-on-stack-overflow = { version = "0.3.0", optional = true }

[features]
default = []
debug-so = ["dep:backtrace-on-stack-overflow"]
