[package]
name = "maze_exit_img_to_bin"
version = "0.1.0"
authors = ["Davide Canton <davide.canton5@gmail.com>"]
edition = "2021"

[dependencies]
maze_exit_lib = { path = "../lib" }
maze_exit_bin_common = { path = "../bin_common" }
anyhow.workspace = true
image.workspace = true
byteorder.workspace = true
clap.workspace = true
zstd.workspace = true
rayon = "1.10.0"
